CHANGES.txt - 2006-03-23
------------------------

CHANGES IN CUPS V1.2rc1

	- Documentation updates (STR #1497, STR #1498)
	- CUPS no longer accepts print jobs if a printer does not
	  support the file format (STR #1501)
	- Cleaned up the PostScript filter (pstops) so that it
	  properly supports %%IncludeFeature and page scaling
	  (STR #1453)
	- Fixed the cupsFileRewind() and cupsFileSeek() functions
	  to work properly with uncompressed files.
	- Added cupsFileGetLine(), cupsFileStderr(),
	  cupsFileStdin(), and cupsFileStdout() functions to the
	  CUPS library.
	- Added a new cupstestdsc program to test the DSC
	  conformance of PostScript files.
	- Added KDE/GNOME icons and a Manage Printers menu item.
	- Added --enable-image and --enable-pdftops configure
	  options to control whether the image and PDF filters
	  are built and installed (default = yes for all
	  platforms but MacOS X)
	- Fixed a minor memory leak in the PPD API.
	- Fixed transcoding issues (STR #1493)
	- The scheduler now enforces a minimum job cost of 100
	  when doing FilterLimit checks.
	- The scheduler would leak file descriptors when printing
	  to raw queues (STR #1491)
	- The IPv6 support did not compile on Tru64 UNIX (STR
	  #1488)
	- ppdOpen2() now converts the NickName and all UI text to
	  UTF-8 (STR #1475)
	- The Set Allows Users web page did not work (STR #1486)
	- When the default policy was not set or set to a non-
	  existing policy, the scheduler did not set the default
	  policy name to "default" (STR #1484)
	- The Zebra CPCL driver did not use the correct righthand
	  margin for the 4" wide label sizes.
	- Fixed a problem with the parsing of fractional real
	  numbers in PPD files.
	- Added Spanish localization files (STR #1480)
	- Fixed localization of a few scheduler messages (STR
	  #1478)
	- Fixed support for HEAD requests in the scheduler (STR
	  #1481)


CHANGES IN CUPS V1.2b2

	- Updated the CUPS design description.